# pdf-mass-unlock

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .yamllint  README.md  main.py  pikepdf-7.2.0-pp39-pypy39_pp73-macosx_10_9_x86_64.whl  pyproject.toml
.github/workflows/: ci.yml  tests.yml
src/pdf_mass_unlock/: cli.py  io_utils.py  logging_utils.py  passwords.py  scanner.py  unlocker.py
tests/: test_cli.py  test_coverage.py  test_io_utils.py  test_logging.py  test_main.py  test_passwords.py  test_scanner.py  test_unlocker.py
